--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
 	"bin": {
 		"cerberus-cli": "./index.mjs"
 	},
-	"dependencies": {
+	"dependencies": {},
+	"devDependencies": {
 		"fs-extra": "^9.0.1",
+		"knex": "^0.21.5",
+		"mysql": "^2.18.1",
+		"pg": "^8.3.2",
 		"replace-in-file": "^6.1.0"
 	},
-	"devDependencies": {},
 	"engines": {
 		"node": ">=12.0"
 	}
