--- a/template-aws/package.json
+++ b/template-aws/package.json
@@ -11,10 +11,13 @@
 		"package": "sam package --template-file template.yaml --s3-bucket cloudformation-build --output-template-file packaged.template.yaml",
 		"deploy": "sam deploy --template-file packaged.template.yaml --stack-name <meta.name>-api --capabilities CAPABILITY_IAM --region eu-west-2",
 		"swagger:up": "docker-compose up -d && echo 'access @ http://localhost:8181'",
-		"swagger:down": "docker-compose down"
+		"swagger:down": "docker-compose down",
+		"test": "mocha test --recursive"
 	},
 	"dependencies": {
-		"cerberus-mvc": "^1.0.5"
+		"cerberus-mvc": "^1.0.5",
+		"mocha": "^8.1.3",
+		"supertest": "^4.0.2"
 	},
 	"devDependencies": {},
 	"engines": {
