--- a/template-express/package.json
+++ b/template-express/package.json
@@ -9,14 +9,17 @@
 		"start": "node handler.js",
 		"serve": "node handler.js",
 		"swagger:up": "docker-compose up -d && echo 'access @ http://localhost:8181'",
-		"swagger:down": "docker-compose down"
+		"swagger:down": "docker-compose down",
+		"test": "mocha test --recursive"
 	},
 	"dependencies": {
 		"body-parser": "^1.19.0",
 		"cerberus-mvc": "^1.0.5",
 		"cluster": "^0.7.7",
 		"express": "^4.17.1",
-		"request-ip": "^2.1.3"
+		"request-ip": "^2.1.3",
+		"mocha": "^8.1.3",
+		"supertest": "^4.0.2"
 	},
 	"devDependencies": {},
 	"engines": {
