--- a/template-aws/template.yaml
+++ b/template-aws/template.yaml
@@ -19,7 +19,7 @@ Globals:
         API_ADDRESS: 'http://localhost:3000'
         API_VERSION: 0.0.1
         API_MODE: development
-        API_CORS_LIST: 'http://localhost:8181' 
+        API_CORS_LIST: 'http://localhost,http://localhost:8181' 
         
 Resources:
   Health:
