--- a/template-aws/package.json
+++ b/template-aws/package.json
@@ -12,15 +12,21 @@
 		"deploy": "sam deploy --template-file packaged.template.yaml --stack-name <meta.name>-api --capabilities CAPABILITY_IAM --region eu-west-2",
 		"swagger:up": "docker-compose up -d && echo 'access @ http://localhost:8181'",
 		"swagger:down": "docker-compose down",
-		"test": "mocha test --recursive"
+		"test": "env SERVER=http://localhost:3000 ORIGIN=http://localhost mocha test --recursive"
 	},
 	"dependencies": {
-		"cerberus-mvc": "^1.0.5",
+		"cerberus-mvc": "^1.0.6",
 		"mocha": "^8.1.3",
 		"supertest": "^4.0.2"
 	},
 	"devDependencies": {},
 	"engines": {
 		"node": ">=12.0"
+	},
+	"mocha": {
+		"diff": true,
+		"reporter": "spec",
+		"slow": 75,
+		"timeout": 10000
 	}
 }
