docker compose tweaks and swagger doc twaks to get fully working system from init with zero changes

--- a/template-aws/docker-compose.yaml
+++ b/template-aws/docker-compose.yaml
@@ -7,6 +7,6 @@ services:
     networks:
       - default
     volumes:
-      - ${PWD}/swagger.json:/mnt/swagger.json
+      - ./swagger.json:/mnt/swagger.json
     ports:
       - 8181:8080
