support for azure functions

--- a/template-azure/package.json
+++ b/template-azure/package.json
@@ -6,24 +6,21 @@
 	"license": "MIT",
 	"private": true,
 	"scripts": {
-		"start": "node handler.js",
-		"serve": "node handler.js",
-		"test": "env SERVER=http://localhost:8082 ORIGIN=http://localhost mocha test --recursive"
+		"start": "func start",
+		"dev": "func start",
+		"serve": "func start",
+		"deploy": "func azure functionapp publish <meta.name> --publish-local-settings -i",
+		"test": "env SERVER=http://localhost:3000 ORIGIN=http://localhost mocha test --recursive"
 	},
 	"dependencies": {
-		"body-parser": "^1.19.0",
-		"cerberus-mvc": "^1.2.1",
-		"cluster": "^0.7.7",
-		"express": "^4.17.1",
-		"request-ip": "^2.1.3",
-		"socket.io": "^3.1.1"
+		"cerberus-mvc": "^1.2.1"
 	},
 	"devDependencies": {
 		"mocha": "^8.1.3",
 		"supertest": "^4.0.2"
 	},
 	"engines": {
-		"node": ">=12.0"
+		"node": ">=18.0"
 	},
 	"mocha": {
 		"diff": true,
