--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "cerberus-cli",
-	"version": "1.0.27",
-	"description": "CerberusCLI is a CLI tool for cerberus-mvc MVC stack for serverless architectures such as lambda; generating new projects, managing databases and more.",
+	"version": "1.1.0",
+	"description": "CerberusCLI is a CLI tool for cerberus-mvc MVC stack for serverless architectures such as lambda/function; generating new projects, managing databases and more.",
 	"author": "Paul Smith",
 	"url": "https://github.com/ulsmith/cerberus-cli",
 	"homepage": "https://cerberus-mvc.co.uk",
@@ -23,6 +23,6 @@
 	},
 	"devDependencies": {},
 	"engines": {
-		"node": ">=12.0"
+		"node": ">=18.0"
 	}
 }
