--- a/template-aws/package.json
+++ b/template-aws/package.json
@@ -10,16 +10,15 @@
 		"serve": "sam local start-api --skip-pull-image --host 0.0.0.0 --template template.yaml",
 		"package": "sam package --template-file template.yaml --s3-bucket cloudformation-build --output-template-file packaged.template.yaml",
 		"deploy": "sam deploy --template-file packaged.template.yaml --stack-name <meta.name>-api --capabilities CAPABILITY_IAM --region eu-west-2",
-		"swagger:up": "docker-compose up -d && echo 'access @ http://localhost:8181'",
-		"swagger:down": "docker-compose down",
 		"test": "env SERVER=http://localhost:3000 ORIGIN=http://localhost mocha test --recursive"
 	},
 	"dependencies": {
-		"cerberus-mvc": "^1.0.7",
+		"cerberus-mvc": "^1.2.1"
+	},
+	"devDependencies": {
 		"mocha": "^8.1.3",
 		"supertest": "^4.0.2"
 	},
-	"devDependencies": {},
 	"engines": {
 		"node": ">=12.0"
 	},
