--- a/template-express/package.json
+++ b/template-express/package.json
@@ -8,20 +8,19 @@
 	"scripts": {
 		"start": "node handler.js",
 		"serve": "node handler.js",
-		"swagger:up": "docker-compose up -d && echo 'access @ http://localhost:8181'",
-		"swagger:down": "docker-compose down",
 		"test": "env SERVER=http://localhost:8082 ORIGIN=http://localhost mocha test --recursive"
 	},
 	"dependencies": {
 		"body-parser": "^1.19.0",
-		"cerberus-mvc": "^1.0.7",
+		"cerberus-mvc": "^1.2.1",
 		"cluster": "^0.7.7",
 		"express": "^4.17.1",
-		"request-ip": "^2.1.3",
+		"request-ip": "^2.1.3"
+	},
+	"devDependencies": {
 		"mocha": "^8.1.3",
 		"supertest": "^4.0.2"
 	},
-	"devDependencies": {},
 	"engines": {
 		"node": ">=12.0"
 	},
