--- a/template-aws/package.json
+++ b/template-aws/package.json
@@ -2,7 +2,7 @@
 	"name": "my-cerberus-mvc-api",
 	"version": "0.0.1",
 	"description": "My cerberus MVC stack API",
-	"author": "Jonny Bee",
+	"author": "Your Name",
 	"license": "MIT",
 	"private": true,
 	"scripts": {
@@ -13,14 +13,14 @@
 		"test": "env SERVER=http://localhost:3000 ORIGIN=http://localhost mocha test --recursive"
 	},
 	"dependencies": {
-		"cerberus-mvc": "^1.2.1"
+		"cerberus-mvc": "^4.0.1"
 	},
 	"devDependencies": {
-		"mocha": "^8.1.3",
-		"supertest": "^4.0.2"
+		"mocha": "^11.5.0",
+		"supertest": "^7.1.1"
 	},
 	"engines": {
-		"node": ">=12.0"
+		"node": ">=23.9.0"
 	},
 	"mocha": {
 		"diff": true,
